<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="#7B54BF"
    tools:context=".SignUpActivity">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/man" />

    <TextView
        android:id="@+id/about_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    <TextView
        android:id="@+id/about_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nav_header_subtitle"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
</LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/ic_menu_account"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/uname"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>

                        <TextView
                            android:id="@+id/about_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nav_header_title"
                            android:textSize="16sp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/baseline_email_24"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/uEmail"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingTop="8dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>

                        <TextView
                            android:id="@+id/about_userEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/nav_header_subtitle"
                            android:textSize="16sp"
                            android:paddingBottom="8dp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/baseline_phone_24"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/mobile"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_91_9493953654"
                            android:textSize="16sp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/baseline_location_on_24"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/address"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/uAddress"
                            android:textSize="16sp"

                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:src="@drawable/baseline_edit_calendar_24"
                        android:layout_gravity="center_vertical"
                        android:contentDescription="@string/name" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/date"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/_12_4_2001"
                            android:textSize="16sp"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>
                    </LinearLayout>

                </LinearLayout>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>